# nix-serve-ng

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  nix-serve-ng.cabal  shell.nix
.github/workflows/: ci.yml
benchmark/: Main.hs
cbits/: nix.cpp  nix.hh
darwin/: Sysctl.hs
linux/: Sysctl.hs
nix/: nix-serve-ng.nix
patches/lix/2.94.0/: pkg-config.patch  version-macros.patch
src/: Main.hs  Nix.hs  Nix.hsc  NixFFI.hsc  Options.hs
test/: basic.nix
